pacman/create_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman
  labels:
    prod_backup: "true"
    name: pacman
