pacman/route_pacman.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman-route
  labels:
    name: pacman
spec:
  to:
    kind: Service
    name: pacman
  host: pacman-pacman.apps.openshift.compwire.com.br
    targetPort: 8080
